--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/register/register_person.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/register/register_person.vm
@@ -1,4 +1,4 @@
-<form class="regist_form" action="../cust/register_person.htm">
+<form class="regist_form" action="../register/register_person.htm">
 <script type="text/javascript" src="../js/register.js"></script>
 <script type="text/javascript" src="../js/JSEncrypt.js"></script>
 <script type="text/javascript">
