--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/cust/indexPage.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/cust/indexPage.vm
@@ -26,7 +26,7 @@ $(function(){
         <div class="logo"><a href="javascript:;">幼教金融，一站通</a></div>
 		<div class="nav"><a 
 			href="${staticDomain}/home/index.htm">首页</a>|<a class="current" 
-			href="${staticDomain}/session/login.htm">资产总览</a>|<a 
+			href="${staticDomain}/cust/session.htm">资产总览</a>|<a 
 			href="${staticDomain}/setting/settingAccount.htm">账户管理</a>|<a 
 			href="${staticDomain}/help/helpNotice.htm">帮助中心</a><span class="member" 
 			href="javascript:;"><i class="trans icon"></i>
@@ -109,7 +109,7 @@ $(function(){
                             <div class="panels list-panels">
                                 <div class="panel slide-in">
                                     <table width="100%">
-										#foreach($tradeRequest in $list022)
+										#foreach($tradeRequest in $listIn)
 										<tr>
                                             <td class="tl" width="30%">${tradeRequest.banknm}</td>
                                             <td class="tl" width="">${tradeRequest.appamt}
@@ -138,7 +138,7 @@ $(function(){
                                 </div>
                                 <div class="panel slide-out">
                                     <table width="100%">
-                                        #foreach($tradeRequest in $list023)
+                                        #foreach($tradeRequest in $listOut)
 										<tr>
                                             <td class="tl" width="30%">${tradeRequest.banknm}</td>
                                             <td class="tl" width="">-${tradeRequest.appvol}
