--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/login/indexPage.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/login/indexPage.vm
@@ -42,7 +42,7 @@ $(function(){
         <div class="logo"><a href="javascript:;">幼教金融，一站通</a></div>
         <div class="nav"><a
 			href="${staticDomain}/home/index.htm">登录</a>|<a
-			href="${staticDomain}/cust/register.htm">注册</a>|<a class="member" 
+			href="${staticDomain}/register/index.htm">注册</a>|<a class="member" 
 			href="javascript:;">我的幼富通</a>|<a class="last" 
 			href="javascript:;">帮助</a></div>
     </div>
