--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/setting/settingPassword.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/setting/settingPassword.vm
@@ -151,32 +151,10 @@ $(function(){
 </script>
 </head>
 <body>
-<div class="container setting">
-    <div class="header">
-    	<div class="inner clearfix rel">
-            <div class="logo"><a href="javascript:;">幼教金融，一站通</a></div>
-            <div class="nav"><a 
-    			href="${staticDomain}/home/index.htm">首页</a>|<a 
-    			href="${staticDomain}/cust/session.htm">资产总览</a>|<a class="current" 
-    			href="${staticDomain}/setting/settingAccount.htm">账户管理</a>|<a 
-    			href="${staticDomain}/help/helpNotice.htm">帮助中心</a><span class="member" 
-    			href="javascript:;"><i class="trans icon"></i>
-    				#if ($CustinfoVo.invnm)
-    					$!{CustinfoVo.invnm}
-                    #else
-                        #set($tailStr=$CustinfoVo.mobileno)
-						#set($start=$tailStr.substring(0,3))
-						#set($end=$tailStr.substring(7,11))
-						$start****$end
-                   	#end<a 
-    			href="${staticDomain}/cust/logout.htm" class="trans out">安全退出</a></span>
-    		</div>
-        </div>
-    </div>
     <div class="body">
        <div class="inner clearfix">
         <div class="title">
-            <h2 class="title-main">帮助中心</h2>
+            <h2 class="title-main">账户管理</h2>
         </div>
         <div class="side side-nav fl">
             <ul>
@@ -347,20 +325,6 @@ $(function(){
 		<input id="bankacco" name="bankacco" value="${bankacco}" type="hidden"/>
     </form>
     </div>
-    <div class="footer">
-        <div class="inner clearfix">
-            <div class="info fl">
-                <p>微信服务号：UFUfund</p>
-                <p>服务邮箱：<a href="mailto:service@ufufund.com">service@ufufund.com</a></p>
-                <p>海富通产品：400-8840-099</p>
-            </div>
-            <div class="copyright fr">
-                <p>幼富通版权所有 ©2015</p>
-                <p><a target="_blank" href="http://www.miitbeian.gov.cn/">沪ICP备14054347号</a></p>
-            </div>
-        </div>
-    </div>
-</div>
 <script src="${staticDomain}/js/scripts/load.js"></script>
 <script src="${staticDomain}/js/scripts/register.js"></script>
 </body>
