--- a/ufb.web/src/main/webapp/WEB-INF/templates/layout/default_trade.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/layout/default_trade.vm
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 #parse("control/common/head_0.vm")
-<body>
-<div class="container">
+<body>	
+<div class="container center">
 #parse("control/common/header_0_trade.vm")
 $body
-#parse("control/common/footer_0.vm")
+#parse("control/common/footer_1.vm")
 </div>
 $!{script}
 </body>
