--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/error/expire.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/error/expire.vm
@@ -1,3 +1,5 @@
+$request.stAttribute("A","12345")
+$request.getAttribute("A")
 <div style="text-align: center; padding-top: 100px; padding-bottom: 100px;height:300px">
 	<h1>您的申请已成功提交，请勿重复操作！</h1>
 	<p>您可以通过交易查询，确认您的交易是否已发起，避免重复提交。
