--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/trade/pay_result.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/trade/pay_result.vm
@@ -1,7 +1,24 @@
-<div style="text-align: center; padding-top: 100px; padding-bottom: 100px;">
-	<h1>充值成功！</h1>
-	<p>您的充值已成功，可通过交易查询查询记录状态。
-	   <a href="${ufbDomain}/query/trade_detail.htm">立即查询</a>
-	</p>
+<!DOCTYPE html>
+<html>
+<head>
+<title>幼富通 - 充值中心</title>
+</head>
+<body>
+<div class="body">
+    <div class="inner clearfix">
+        <div class="title clearfix">
+            <h2 class="title-main fl">资产总览 | 充值</h2>
+        </div>
+        <div class="form-payInto">
+			<div style="text-align: center; padding-top: 100px; padding-bottom: 100px;">
+            	<h1>充值成功！</h1>
+            	<p>您的充值已成功，可通过交易查询查询记录状态。
+            	   <a href="${staticDomain}/cust/session.htm">立即查询</a>
+            	</p>
+            </div>
+        </div>
+    </div>
 </div>
 <script src="${staticDomain}/js/scripts/load.js"></script>
+</body>
+</html>
